Add bibliography flag

--- a/essay_template/{{cookiecutter.project_name}}/Makefile
+++ b/essay_template/{{cookiecutter.project_name}}/Makefile
@@ -18,6 +18,7 @@ pdf:
 	  --pdf-engine   xelatex      		\
 	  --resource-path=.:fig			\
 	  --highlight-style highlight.theme	\
+	  --bibliography biblio.bib		\
 	  $(FILES)
 
 format:
